--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -14,3 +14,7 @@ ecommerce.jwt.expirationInMinute = 720
 ecommerce.jwt.iss = khangnlg
 ecommerce.jwt.enable = true
 
+# ===============> Jedis config <====================
+jedis.port = 6379
+jedis.host = localhost
+jedis.timeout = 1000
