--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -18,3 +18,5 @@ ecommerce.jwt.enable = true
 jedis.port = 6379
 jedis.host = localhost
 jedis.timeout = 1000
+
+# ===============> Logback config <====================
