--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.12</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
 	<groupId>com.khangnlg</groupId>
 	<artifactId>ecommerce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -35,6 +29,8 @@
 		<slf4j.api.version>2.0.3</slf4j.api.version>
 		<logback.classic.version>1.4.5</logback.classic.version>
 		<slf4j.simple.version>1.7.25</slf4j.simple.version>
+		<jaxb.api.version>2.3.1</jaxb.api.version>
+		<maven.complier.plugin>3.11.0</maven.complier.plugin>
 	</properties>
 
 	<dependencyManagement>
@@ -131,6 +127,21 @@
 				<artifactId>spring-boot-starter-log4j2</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>${jaxb.api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.khangnlg</groupId>
+				<artifactId>user</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.khangnlg</groupId>
+				<artifactId>product</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -146,11 +157,12 @@
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>${spring.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.11.0</version>
+					<version>${maven.complier.plugin}</version>
 					<configuration>
 						<source>11</source>
 						<target>11</target>
