--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -19,4 +19,7 @@ jedis.port = 6379
 jedis.host = localhost
 jedis.timeout = 1000
 
-# ===============> Logback config <====================
+# ===============> Liquibase config <====================
+spring.liquibase.enabled = true
+
+spring.liquibase.change-log = classpath:/db/changelog/changelog-master.xml
