--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.12</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
 	<groupId>com.khangnlg</groupId>
 	<artifactId>ecommerce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -35,6 +29,10 @@
 		<slf4j.api.version>2.0.3</slf4j.api.version>
 		<logback.classic.version>1.4.5</logback.classic.version>
 		<slf4j.simple.version>1.7.25</slf4j.simple.version>
+		<jaxb.api.version>2.3.1</jaxb.api.version>
+		<maven.complier.plugin>3.11.0</maven.complier.plugin>
+		<liquibase.core.version>4.22.0</liquibase.core.version>
+		<liquibase.maven.plugin.version>4.2.2</liquibase.maven.plugin.version>
 	</properties>
 
 	<dependencyManagement>
@@ -131,6 +129,26 @@
 				<artifactId>spring-boot-starter-log4j2</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>${jaxb.api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.khangnlg</groupId>
+				<artifactId>user</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.khangnlg</groupId>
+				<artifactId>product</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-core</artifactId>
+				<version>${liquibase.core.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -146,6 +164,7 @@
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>${spring.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -156,6 +175,15 @@
 						<target>11</target>
 						<encoding>UTF-8</encoding>
 						<forceJavacCompilerUse>true</forceJavacCompilerUse>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.liquibase</groupId>
+					<artifactId>liquibase-maven</artifactId>
+					<version>${liquibase.maven.plugin.version}</version>
+					<configuration>
+						<propertyFileWillOverride>true</propertyFileWillOverride>
+						<propertyFile>src/main/resources/application.properties</propertyFile>
 					</configuration>
 				</plugin>
 			</plugins>
