fix build maven

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+server.port = 9999
+
 #  ===============> config spring data jpa <============
 #spring.datasource.driver-class-name= com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
