--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ecommerce</name>
 	<description>Practice microservice</description>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.12</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
 	<modules>
 		<module>core</module>
 		<module>product</module>
@@ -170,6 +164,7 @@
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>${spring.version}</version>
 					<configuration>
 						<mainClass>com.khangnlg.Main</mainClass>
 					</configuration>
