--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -26,3 +26,11 @@ jedis.timeout = 1000
 spring.liquibase.enabled = true
 
 spring.liquibase.change-log = classpath:/db/changelog/changelog-master.xml
+
+# ===============> Liquibase config <====================
+
+management.endpoints.web.exposure.include = *
+management.endpoints.web.base-path = /actuator
+management.endpoints.web.path-mapping.prometheus = metrics
+management.endpoint.health.show-details = always
+management.endpoint.prometheus.cache.time-to-live = 1ms
