--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -36,3 +36,5 @@ management.endpoint.health.show-details = always
 management.endpoint.prometheus.cache.time-to-live = 1ms
 
 user.host.url = http://localhost:8881
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
