--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>user</module>
 		<module>notification</module>
         <module>migration</module>
+        <module>store</module>
     </modules>
 	<packaging>pom</packaging>
 
@@ -40,6 +41,7 @@
 		<netty.version>4.1.93.Final</netty.version>
 		<refactor.core.version>3.5.6</refactor.core.version>
 		<springfox.swagger2.version>2.9.2</springfox.swagger2.version>
+		<flyway.core.version>>9.20.0</flyway.core.version>
 	</properties>
 
 	<dependencyManagement>
@@ -200,6 +202,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-log4j2</artifactId>
 				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-test</artifactId>
+				<scope>test</scope>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter</artifactId>
+				<version>${spring.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
