--- a/user/pom.xml
+++ b/user/pom.xml
@@ -17,6 +17,11 @@
             <groupId>com.khangnlg</groupId>
             <artifactId>core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
