--- a/user/src/test/resources/application.properties
+++ b/user/src/test/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql= true
-spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.show-sql= true
+#spring.jpa.properties.hibernate.format_sql = true
 
 # ===============> My secrect key <====================
 ecommerce.jwt.secret-key = springapplicationmicroservicemavendemo
